Bug 163580 - Help in LibreOffice
Summary: Help in LibreOffice
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Documentation (show other bugs)
Version:
(earliest affected)
24.8.2.1 release
Hardware: All All
: medium normal
Assignee: Buovjaga
URL:
Whiteboard: target:25.2.0 target:24.8.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2024-10-22 20:13 UTC by Jerzy Moruś
Modified: 2024-10-24 07:45 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jerzy Moruś 2024-10-22 20:13:13 UTC
If the "Warn if local help is not installed" option is disabled in the general LibreOffice options and the help is not installed, then it is not invoked at all, despite an active Internet connection.
Comment 1 Buovjaga 2024-10-23 05:22:11 UTC
This is due to commit c48952eb6b6f65affcda75ee74c292008be9c455 in 24.8.
tdf#142926 Add button to Download page in Help dialog box
Comment 2 Commit Notification 2024-10-24 04:10:23 UTC
Ilmari Lauhakangas committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/624f01b02569f0a514b357a4d591b8526c3f73f2

tdf#163580 Open online Help, if warn option is not checked

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-10-24 05:48:36 UTC
Ilmari Lauhakangas committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/bd826f8acfd8856a0db8485612bf834a8e500881

tdf#163580 Open online Help, if warn option is not checked

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.