tdf#163580 Open online Help, if warn option is not checked

Change-Id: I438032955f399a8b4737d100bee8a3db54427525
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175468
Reviewed-by: Rafael Lima <rafael.palma.lima@gmail.com>
Tested-by: Jenkins
(cherry picked from commit 624f01b02569f0a514b357a4d591b8526c3f73f2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175491
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>